@startuml
'https://plantuml.com/sequence-diagram

class App {
    main()
    start()
}

class AppController{
    + openListButtonClicked()
    + saveListButtonClicked()
    + showAllItemsButtonClicked()
    + showCompleteItemsButtonClicked()
    + showIncompleteItemsButtonClicked()
    + addItemButtonClicked()
    + removeItemButtonClicked()
    + removeAllItemsButtonClicked()


    + openList()
    + saveList()
    + showAllItems()
    + showCompleteItems()
    + showIncompleteItems()
    + addItem()
    + removeItem()
    + removeAllItems()
    + updateData()
    + copyData()
}

class ToDoList{
    - ArrayList ToDoItem;
    - String Title;

    + getListTitle()
    + setListTitle()
}

class ToDoItem{
    - DatePicker itemDueDate;
    - CheckBox isItemComplete;
    - String itemDescription;
    - String stringDueDate;
    - boolean boolComplete;
    - String stringDesc;

    + getItemDueDate()
    + setItemDueDate()
    + getItemDescription()
    + setItemDescription()
    + getIsItemComplete()
    + toggleItemComplete()
    + getStringDueDate()
    + setStringDueDate()
    + getBoolComplete()
    + setBoolComplete()
    + getStringDesc()
    + setStringDesc()

}

javafx.Application <|-- App
App -- AppController
ToDoList --> ToDoItem
AppController --> ToDoList

@enduml